<resources>
    <string name="app_name">Flexistant</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="textview_change_login_title">textview_change_login_title</string>
    <string name="textview_password_new">textview_password_new</string>
    <string name="textview_password_old">textview_password_old</string>
    <string name="textview_password_second">textview_password_second</string>
    <string name="button_save_password">button_save_password</string>
    <string name="textview_login_title">textview_login_title</string>
    <string name="textview_username">textview_username</string>
    <string name="textview_password">textview_password</string>
    <string name="button_signin">button_signin</string>
    <string name="button_forgotten">button_forgotten</string>
    <string name="textview">TextView</string>
    <string name="ja">Ja</string>
    <string name="nee">Nee</string>
    <string name="placeholder_log_in">login</string>
    <string name="placeholder_profile">profile</string>
    <string name="placeholder_settings">settings</string>
    <string name="button_facturen_bekijken">button_facturen_bekijken</string>
    <string name="button_auto_leasen">button_auto_leasen</string>
    <string name="auto">auto</string>
    <string name="kenteken">kenteken</string>
    <string name="factuur_pagina">factuur_pagina</string>
    <string name="button_previous">button_previous</string>
    <string name="button_next">button_next</string>
    <string name="factuur_tabel_row1">factuur_tabel_row1</string>
    <string name="factuur_tabel_row2">factuur_tabel_row2</string>
    <string name="factuur_tabel_row3">factuur_tabel_row3</string>
    <string name="flexlease">flexlease</string>
    <string name="flexlease_voorkeuren">flexlease_voorkeuren</string>
    <string name="voertuigen">voertuigen</string>
    <string name="textview_user">textview_user</string>
    <string name="textview_emailadress">textview_emailadress</string>
    <string name="extview_licenseplate">extview_licenseplate</string>
    <string name="button_changepassword">button_changepassword</string>
    <string name="button_goto_overview">button_goto_overview</string>
    <string name="user_profile_picture">user_profile_picture</string>
    <string name="textview_syncgoogleactivities">textview_syncgoogleactivities</string>
    <string name="textview_syncemail">textview_syncemail</string>
    <string name="textview_connectgooglehome">textview_connectgooglehome</string>
    <string name="textview_syncagenda">textview_syncagenda</string>
    <string name="textview_nightmode">textview_nightmode</string>
    <string name="textview_notifications">textview_notifications</string>
    <string name="extview_settingsothers">extview_settingsothers</string>
    <string name="textview_carpreferences">textview_carpreferences</string>
    <string name="textview_accessablitiy">textview_accessablitiy</string>
    <string name="textview_deleteprofile">textview_deleteprofile</string>
    <string name="textview_shareflexistantapp">textview_shareflexistantapp</string>
    <string name="textview_settingsmain">textview_settingsmain</string>
    <string name="activities_icon">activities_icon</string>
    <string name="agenda_icon">agenda_icon</string>
    <string name="notifications_icon">notifications_icon</string>
    <string name="accessablilty_icon">accessablilty_icon</string>
    <string name="shareapplication_icon">shareapplication_icon</string>
    <string name="radiobutton">RadioButton</string>
    <string name="verstuur">Verstuur!</string>
    <string name="avatar">avatar</string>
    <string name="title_activity_inloggen">Inloggen</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Wachtwoord</string>
    <string name="action_sign_in">Inloggen</string>
    <string name="action_sign_in_short">Inloggen</string>
    <string name="welcome">"Welkom!"</string>
    <string name="invalid_username">Geen geldig wachtwoord</string>
    <string name="invalid_password">Wachtwoord moet minimaal 5 karakters hebben</string>
    <string name="login_failed">"Login mislukt"</string>

    <!--Strings voor Activity vervoersmiddelen-->
    <string name="radiobutton_activityVervoersmiddelen1">Vraag 1</string>
    <string name="radiobutton_activityVervoersmiddelen2">Vraag 2</string>
    <string name="radiobutton_activityVervoersmiddelen3">Vraag 3</string>
    <string name="radiobutton_activityVervoersmiddelen4">Vraag 4</string>

    <!--Strings voor Activity PrivacyStatement-->
    <string name="PrivacyStatement">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque malesuada finibus rutrum. Nam vitae felis felis. Pellentesque laoreet porttitor eleifend. In eget arcu vel nulla cursus ullamcorper et sed eros. Vestibulum a eros vulputate, consectetur odio sed, tempus lorem. Praesent in orci vel eros eleifend egestas et vitae nisi. Sed tempus auctor dui eget maximus. Suspendisse viverra lacinia urna et feugiat. Nullam non tincidunt sem, in cursus diam. Quisque sagittis nisl venenatis, blandit nunc a, malesuada sem. Vestibulum tincidunt convallis dui, eu dignissim nulla accumsan a. Ut placerat tortor ex, ut ullamcorper nibh lacinia hendrerit. Fusce ex ligula, bibendum vitae suscipit non, suscipit sit amet elit.

Curabitur hendrerit nunc non consectetur consectetur. Nulla ac sem id risus suscipit feugiat. Nulla id purus nisl. Sed imperdiet, leo eu eleifend fringilla, diam orci feugiat augue, ac porttitor nibh dolor id turpis. Mauris sed dapibus nibh, non semper nunc. Mauris lacinia, purus non feugiat consequat, ligula turpis vehicula velit, sit amet molestie metus dui id nibh. Aenean porta libero in dignissim tristique. Nulla ac diam eget risus sodales condimentum quis ut tellus. Nulla porttitor leo nisi, quis laoreet justo tincidunt sit amet. In blandit tempus sem et varius. Pellentesque a ligula eu justo consequat molestie. Nunc ac nulla lectus.</string>

    <!--Strings voor activity Melding-->
    <string name="Vraag1ActivityMelding">Melding vraag 1</string>
    <string name="Vraag2ActivityMelding">Melding vraag 2</string>


</resources>
