<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_settings">

    <TextView
        android:id="@+id/textView_settingsMain"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="140dp"
        android:text="@string/textview_settingsmain"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_agenda"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/agenda_icon"
        app:layout_constraintEnd_toStartOf="@+id/textView_syncAgenda"
        app:layout_constraintHorizontal_bias="0.818"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_my_calendar" />

    <TextView
        android:id="@+id/textView_syncAgenda"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="200dp"
        android:text="@string/textview_syncagenda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/button_syncAgenda"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="196dp"
        app:layout_constraintStart_toStartOf="@+id/textView_syncAgenda"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_syncEmail"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="230dp"
        android:text="@string/textview_syncemail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_email"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/agenda_icon"
        app:layout_constraintEnd_toStartOf="@+id/textView_syncEmail"
        app:layout_constraintHorizontal_bias="0.818"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <Switch
        android:id="@+id/button_syncEmail"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="226dp"
        app:layout_constraintStart_toStartOf="@+id/textView_syncEmail"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_activities"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/activities_icon"
        app:layout_constraintEnd_toStartOf="@+id/textView_syncGoogleActivities"
        app:layout_constraintHorizontal_bias="0.818"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/sym_action_call" />

    <TextView
        android:id="@+id/textView_syncGoogleActivities"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="260dp"
        android:text="@string/textview_syncgoogleactivities"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/button_syncGoogleActivities"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="256dp"
        app:layout_constraintStart_toStartOf="@+id/textView_syncGoogleActivities"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_home"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/agenda_icon"
        app:layout_constraintEnd_toStartOf="@+id/textView_connectGoogleHome"
        app:layout_constraintHorizontal_bias="0.818"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_home_black_24dp" />

    <TextView
        android:id="@+id/textView_connectGoogleHome"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="290dp"
        android:text="@string/textview_connectgooglehome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/button_connectGoogleHome"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="286dp"
        app:layout_constraintStart_toStartOf="@+id/textView_connectGoogleHome"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_nightMode"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/agenda_icon"
        app:layout_constraintEnd_toStartOf="@+id/textView_nightMode"
        app:layout_constraintHorizontal_bias="0.818"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog" />

    <TextView
        android:id="@+id/textView_nightMode"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="320dp"
        android:text="@string/textview_nightmode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/button_nightMode"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="316dp"
        app:layout_constraintStart_toStartOf="@+id/textView_nightMode"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_notifications"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/notifications_icon"
        app:layout_constraintEnd_toStartOf="@+id/textView_notifications"
        app:layout_constraintHorizontal_bias="0.818"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_notifications_black_24dp" />

    <TextView
        android:id="@+id/textView_notifications"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="350dp"
        android:text="@string/textview_notifications"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/button_notifications"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="346dp"
        app:layout_constraintStart_toStartOf="@+id/textView_notifications"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_settingsOther"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="420dp"
        android:text="@string/extview_settingsothers"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_carPreferences"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/textview_carpreferences"
        app:layout_constraintEnd_toStartOf="@+id/textView_carPreferences"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_preferences" />

    <TextView
        android:id="@+id/textView_carPreferences"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="480dp"
        android:text="@string/textview_carpreferences"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_accessability"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="508dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/accessablilty_icon"
        app:layout_constraintEnd_toStartOf="@+id/textView_accessability"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_lock_idle_lock" />

    <TextView
        android:id="@+id/textView_accessability"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="508dp"
        android:text="@string/textview_accessablitiy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_deleteProfile"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="540dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/textview_deleteprofile"
        app:layout_constraintEnd_toStartOf="@+id/textView_deleteProfile"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_delete" />

    <TextView
        android:id="@+id/textView_deleteProfile"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="540dp"
        android:text="@string/textview_deleteprofile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_shareApp"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="568dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/shareapplication_icon"
        app:layout_constraintEnd_toStartOf="@+id/textView_shareFlexistantApp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeShareDrawable" />

    <TextView
        android:id="@+id/textView_shareFlexistantApp"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="568dp"
        android:text="@string/textview_shareflexistantapp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

</android.support.constraint.ConstraintLayout>