<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView_logInTitle"
        android:layout_width="310dp"
        android:layout_height="69dp"
        android:layout_marginStart="175dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="592dp"
        android:text="@string/textview_login_title"
        android:textSize="25sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_userName"
        android:layout_width="306dp"
        android:layout_height="60dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="191dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="480dp"
        android:text="@string/textview_username"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_password"
        android:layout_width="306dp"
        android:layout_height="60dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="411dp"
        android:text="@string/textview_password"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_signin"
        android:layout_width="143dp"
        android:layout_height="55dp"
        android:layout_marginStart="138dp"
        android:layout_marginTop="341dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="344dp"
        android:text="@string/button_signin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_forgotten"
        android:layout_width="143dp"
        android:layout_height="55dp"
        android:layout_marginStart="138dp"
        android:layout_marginTop="460dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="344dp"
        android:text="@string/button_forgotten"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>